# pipeline

./: .gitignore  Dockerfile  chunked.py  gui.py  pipeline.py  pyproject.toml  run_docker  targets.txt  test.txt
test/: test_lightcurves.py  validate.aux  validate.tex
test/test_lightcurves/363963079/: Sector33.csv  Sector34.csv  Sector35.csv  Sector61.csv  Sector62.csv  Sector7.csv  Sector8.csv
test/test_lightcurves/404144841/: Sector11.csv  Sector37.csv  Sector38.csv  Sector64.csv
