[project]
name = "threaded"
version = "0.1.0"
description = ""
authors = [
    {name = "Gideon Grinberg",email = "grinberg1165@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "lightkurve (>=2.5.0,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "astropy (>=7.0.1,<8.0.0)",
    "astroquery (>=0.4.9.post1,<0.5.0)"
]


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"



[tool.poetry.group.gui.dependencies]
dearpygui = "^2.0.0"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

